# s1-snowdepth

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
s1_snowdepth/: .env.example  cli.py  config.py  environment.yml
s1_snowdepth/download/: ims.py  modis.py  sentinel1.py
s1_snowdepth/preprocessing/: s1_scaling.py  snow_cover_fraction.py
s1_snowdepth/run/: ml_snow_functions.py  run_model_script.py
tests/download/: test_ims.py  test_modis.py  test_sentinel1.py
tests/preprocessing/: test_snow_cover_fraction.py
