[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s1-snowdepth"
version = "0.1.0"
description = "Tools for operationalizing Dr. Dunmire's machine learning model to estimate snow depth across the European Alps using Sentinel-1 SAR backscatter."
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "xarray",
    "rioxarray",
    "rasterio",
    "scipy",
    "python-dotenv",
    "asf_search",
    "earthengine-api",
    "netcdf4",
    "click",
    "requests",
    "huggingface-hub",
    "hyp3_sdk",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
s1-snowdepth = ["environment.yml", ".env.example"]

[project.scripts]
s1-snowdepth = "s1_snowdepth.cli:main"

