[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s1-snowdepth"
version = "0.2.2"
description = "Tools for operationalizing Dr. Dunmire's machine learning model to estimate snow depth across the European Alps using Sentinel-1 SAR backscatter."
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "xarray",
    "rioxarray",
    "rasterio",
    "scipy",
    "python-dotenv",
    "asf_search",
    "earthengine-api",
    "netcdf4",
    "click",
    "requests",
    "huggingface-hub",
    "hyp3_sdk",
    "joblib",
    "shap",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
s1_snowdepth = ["environment.yml", ".env.example", "final_model_xg.pkl"]

[project.scripts]
s1-snowdepth = "s1_snowdepth.cli:main"

